--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<h3>My Project</h3>
+<p>
 For the project I am going to work on this semester, I am going to make a website that contains specifications and information on many different models of cars. This will be organized and stored so that it can be viewed my anyone researching cars.
+</p>
+
+<h4>Main User</h4>
+<p>
+My project's main user will be someone who is shopping for a new car and wants to look up information about many different current cars on the market, or just someone who is interested in learning about the specs of new cars.
+</p>
+
+<h4>Goals</h4>
+<p>
+My project's main goals will be to organize and display information and specifications for many models of cars in an easy to view and way. It will also be intuitive to sort through based on different criteria.
+</p>
+
