--- a/home.html
+++ b/home.html
@@ -14,77 +14,16 @@
           background-position: center;
         }
 		</style>
+
+		<script src="controller.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
 	</head>
 
 	<body>
-	<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">CarsDB</a>
-    </div>
+		<div id="navbar"></div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sort by <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Make</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Engine Type</a></li>
-	    <li><a href="#">Engine Location</a></li>
-	    <li><a href="#">Drive Wheels</a></li>
-	    <li><a href="#">Transmission Type</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Body Style</a></li>
-	    <li class="divider"></li>
-	    <li><a href="#">Model Year</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-
-
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <div class="nav navbar-right">
-      	<button type="sybmit" class="btn btn-default navbar-btn">Sign In</button>
-	</div>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-<div class="container">
-<div class="col-md-4"></div>
-<div class="col-md-4">
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading"><h3 style="text-align:center">Welcome to CarsDB!</h3></div>
-
-  <!-- List group -->
-  <ul class="list-group">
-    <li class="list-group-item">Sort and browse cars by their make, model year, or other technical specifications</li>
-    <li class="list-group-item">Search our database to quickly find the car you're looking for</li>
-    <li class="list-group-item">View pictures of each car, and learn about their technical specifications</li>
-    <li class="list-group-item">Expand our database by adding cars that are not yet supported</li>
-    <li class="list-group-item">It's free! Join today, or look around before you join!</li>
-  </ul>
-</div>
-
-<a class="btn btn-primary" href="#" role="button">Sign Up!</a>
-</div>
-<div class="col-md-4"></div>
-</div>
+		<div id="body">
+		</div>
 
 
 	</body>
