--- a/home.html
+++ b/home.html
@@ -5,6 +5,9 @@
 		<link rel="stylesheet" href="http://cdn.datatables.net/1.10.2/css/jquery.dataTables.min.css" />
 		<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		<script src="//www.parsecdn.com/js/parse-1.4.2.min.js"></script>
+		<script src="js/assignment7.js"></script>
+
 		<style>
 			body
         {
